--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\halbauer\\python3\\python.exe"
+    "python.pythonPath": "C:\\Users\\Lars\\Python37\\python.exe"
 }
